--- a/SouvenirShop.csproj
+++ b/SouvenirShop.csproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.1" NoWarn="NU1605" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.1" NoWarn="NU1605" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.0+m8.0.23" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
