Added Data Seed

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySQL": "Server=localhost;Port=3306;Database=souvenirshop;Uid=root;Pwd=OngToanKhiem323926;CharSet=utf8"
+    "MySQL": "Server=localhost;Port=3306;Database=souvenirshop;Uid=root;Pwd=Haha01555;CharSet=utf8"
   },
   "Logging": {
     "LogLevel": {
