--- a/SouvenirShop.csproj
+++ b/SouvenirShop.csproj
@@ -14,5 +14,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
+    <PackageReference Include="Stripe.net" Version="39.45.0"/>
   </ItemGroup>
 </Project>
